--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-#<font face="微軟正黑體">錦川的計算機程式課程</font>
+#<font face="微軟正黑體">錦川的網際內容管理課程</font>
 
 ##<font face="微軟正黑體">四設一甲 40523122</font>
 <small>
