delete wrong word

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout localhost.key -
 <p align="left">
   
  /etc/stunnel建立一個資料夾：<Br/>
-mkdir resiposity<br/>
-cd resiposity<br/>
+mkdir repository<br/>
+cd repository<br/>
 fossil init wcm6.fossil...........................建立wcm6.fossil<br/>
 sudo /etc/init.d/stunnel4 restart.............重啟即可
 
