--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@ T568B<br/>
 
 使用putty連接上遠端電腦<br>
 
-<blockquote>
-<p align="left">
-sudo apt update        更新<br>
-sudo apt nginx    安裝nginx<br>
 
-</blockquote>
+<pre>
+<p align="left">
+sudo apt update ........更新<br>
+sudo apt nginx...........安裝nginx<br>
+</pre>
+
 
 </p>
 </script>
@@ -120,16 +121,16 @@ sudo apt nginx    安裝nginx<br>
 <section data-markdown>
 <script type="text/template">
 <h2><font face="微軟正黑體">stunnel安裝設定</font></h2>
-
+<pre>
 <p align="left">
-sudo apt update............................更新   <br/>
-sudo apt install stunnel4 -y.......安裝stunnel-4   <br/>
-sudo apt install fossil....................安裝fossil <br/>
-sudo vi /etc/environment...........編輯environment設定<br/>
+sudo apt update ............................更新   <br/>
+sudo apt install stunnel4 -y .......安裝stunnel-4   <br/>
+sudo apt install fossil ....................安裝fossil <br/>
+sudo vi /etc/environment ...........編輯environment設定<br/>
 HTTPS=on<br/>
-sudo vi /etc/default/stunnel4...編輯stunnel4設定<br/>
+sudo vi /etc/default/stunnel4 ...編輯stunnel4設定<br/>
 ENABLED=1<br/>
-
+</pre>
 
 
 
