--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-#<font face="微軟正黑體">錦川的網際內容管理課程</font>
+<h1><font face="微軟正黑體" >錦川的網際內容管理課程 </font></h1>
+<h4><font face="微軟正黑體">四設一甲 40523122 Wcm6</h4>
 
-##<font face="微軟正黑體">四設一甲 40523122</font>
 <small>
 Created by [40523122](https://github.com/s40523122)
 </small>
@@ -64,11 +64,14 @@ Created by [40523122](https://github.com/s40523122)
 <h2><font face="微軟正黑體">學習目標</font></h2>
 <p align="left">使用Ubuntu系統，並在純ipv6狀態下管理網際內容。<br/>
 <br/>
-期中目標：<br/>
+<font color="#FF0000">期中目標：</font><br/>
 　　製作網路線分組組裝電腦，安裝設定Ubuntu系統，連接網路並學習使用putty遠端操作電腦。<br/>
-<br/>
-期末目標：<br/>
-　　於小組電腦上架設stunnel與CMsimfly達成網際管理目的。
+
+<font color="#FF5511">期末目標：</font><br/>
+　　於小組電腦上架設stunnel與CMsimfly達成網際管理目的。<br/>
+
+<font color="#FF8800">目前小組進度：</font><br/>
+　　已完成進度到fossil架設，正在架設CMsimfly至主機內。<br/>
 
 </p>
 </section>
@@ -96,9 +99,9 @@ T568B<br/>
 
 使用putty連接上遠端電腦<br>
 
-
-<pre>
 <p align="left">
+<pre>
+
 sudo apt update ........更新<br>
 sudo apt nginx...........安裝nginx<br>
 </pre>
@@ -291,6 +294,9 @@ putty注意事項：<br/>
 </script>
  
 </section>
+</section>
+<section>
+<img src="picture/error1.png" /></p>
 </section>
 </div>
 </font>
