--- a/index.html
+++ b/index.html
@@ -295,6 +295,25 @@ putty注意事項：<br/>
  
 </section>
 </section>
+<section>
+<section data-markdown>
+<script type="text/template">
+<h3>心得:</h3><br/>
+<p align="left">　　本學習的課為一個新的內容，教我們能建立伺服來達到遠端多人管理的任務。期中前為使用VirtualBox架構虛擬Ubuntu16.04環境，模擬操作過程，期中過後首先我們製作了網路線，接下來將廢棄電腦重新組裝，成為能供我們使用的伺服，然後按照期中前的步驟，使組裝過的電腦安裝Ubuntu並連接網路成為遠端，使用putty連結遠端電腦，讓我們能在任何地方使用自己的電腦操作遠端電腦達到管理作用。<br/></p>
+　　
+</script>
+ 
+</section>
+<section data-markdown>
+<script type="text/template">
+<p align="left">　　中途也遇到許多事，其中幾件還蠻多人遇到，所以整理後放在<a href="https://s40523122.github.io/2017springwcm_hw/blog/git-push-shi-errorjie-jue-fang-fa.html"><font color="#0066FF">網誌</font></a>裡當作日後參考，雖然大部分都依照老師寫的網誌<a href="http://mde.tw/2017springwcm/blog/2017spring-wcm-midterm.html"><font color="#0066FF">http://mde.tw/2017springwcm/blog/2017spring-wcm-midterm.html </font> </a>，但中途還是遇到一些問題，所以寫在<a href="https://s40523122.github.io/2017springwcm_hw/blog/fossil-bu-chong.html"><font color="#0066FF">補充 </font></a>內，比較可惜的是因為遠端放在ipv6環境下，對於此環境還不熟悉，所以來不及完成CMsimfly的安裝，但至少對於網路和管理有更深的認識了，對於老師說的"你和其他人有什麼不一樣"，我有很深的體悟，或許是因為沒有每個禮拜回推、練習，所以期末才會手足無措，今後當會更加努力面對每一堂課。</p>
+</script>
+ 
+</section>
+</section>
+<section>
+<h1>END</h1>
+</section>
 </div>
 </font>
 </div>
